# bgc-data-processing

./: .flake8  .gitignore  .pre-commit-config.yaml  Makefile  README.md  config.template.toml  config.toml  environment.yml  mkdocs.yml  output.txt  pyproject.toml  variables.toml
.github/workflows/: documentation.yml
bgc_data_processing/: __init__.py  base.py  convert_polygons.py  csv_tools.py  data_classes.py  dateranges.py  exceptions.py  features.py  netcdf_tools.py  parsers.py  tracers.py  utils.py  variables.py
bgc_data_processing/data_providers/: __init__.py  argo.py  clivar.py  cmems.py  glodap.py  glodap_2019.py  glodap_2022.py  ices.py  imr.py  nmdc.py
bgc_data_processing/lists_reader/: __init__.py  parsers.py
bgc_data_processing/mapper/: config.py  data_readers.py  loaders.py  plotters.py  selectors.py  tracers.py
config/: plot.toml  providers.template.toml  save.toml
config/default/: compare_sim_obs.toml  compare_sims_obs.toml  evolution_profile.toml  extract_data.toml  match_hycom_obs.toml  plot_interactive.toml  plot_mesh.toml  plot_mesh_from_files.toml  plot_profile.toml  plot_profile_from_files.toml  plot_var_boxplot.toml  plot_var_histogram.toml  plot_var_pressure.toml  providers.toml  save.toml  save_data.toml  select_watermass.toml  variables.toml  water_masses.toml
docs/: index.md  pages_generator.py  virtual_env.md
docs/contributing/: index.md
docs/examples/: boundaries.md  index.md  plot.md
docs/how_it_works/: aggregation.md  closest_point_find.md  index.md  loading.md  plotting.md  variables.md
docs/projects/: data_aggregator.md  mapper.md
docs/scripts/: compare_sims_obs.md  index.md  match_hycom_obs.md  pages_generator.py  plot_data_density.md  plot_interactive.md  plot_mesh.md  plot_profile.md  plot_ts_diagram.md  plot_var_boxplot.md  plot_var_histogram.md  plot_var_pressure.md  save_data.md
docs/virtual_env/: index.md
lists/: ran_cycle_2007.txt  ran_cycle_200705.txt  ran_cycle_200706.txt  ran_cycle_2008.txt  ran_cycle_2009.txt  ran_cycle_2010.txt  ran_cycle_2011.txt  ran_cycle_2012.txt  ran_cycle_2013.txt  ran_cycle_2014.txt  ran_cycle_2015.txt  ran_cycle_2016.txt  ran_cycle_2017.txt  ran_cycle_2018.txt  ran_cycle_2019.txt  ran_cycle_2020.txt  ran_cycle_2021.txt
scripts/: build_docs_local.sh  compare_sim_obs.py  compare_sims_obs.py  documentation.sh  execute_in_conda_env.sh  extract_data.py  extract_water_mass.py  match_hycom_obs.py  plot_data.sh  plot_data_density.py  plot_interactive.py  plot_mesh.py  plot_mesh_from_files.py  plot_profile.py  plot_profile_from_files.py  plot_ts_diagram.py  plot_var_boxplot.py  plot_var_histogram.py  plot_var_pressure.py  save_data.py  save_data.sh  select_watermass.py
scripts/aggregator/: save_data.py
scripts/mapper/: plot_argo.py  plot_mesh.py
src/bgc_data_processing/: __init__.py  _data_classes.py  abfiles_tools.py  base.py  csv_tools.py  data_classes.py  data_sources.py  exceptions.py  features.py  interpolation.py  loaders.py  netcdf_tools.py  parsers.py  selectors.py  tracers.py  units.py  verbose.py  water_masses.py
src/bgc_data_processing/comparison/: __init__.py  interpolation.py  matching.py  metrics.py
src/bgc_data_processing/core/: __init__.py  filtering.py  sources.py  storers.py
src/bgc_data_processing/core/io/: __init__.py  readers.py  savers.py
src/bgc_data_processing/core/loaders/: __init__.py  abfile_loaders.py  base.py  csv_loaders.py  netcdf_loaders.py
src/bgc_data_processing/core/variables/: __init__.py  sets.py  vars.py
src/bgc_data_processing/data_providers/: __init__.py  argo.py  clivar.py  cmems.py  esacci_oc.py  glodap.py  glodap_2019.py  glodap_2022.py  hycom.py  ices.py  imr.py  nmdc.py
src/bgc_data_processing/data_structures/: __init__.py  filtering.py  storers.py  variables.py
src/bgc_data_processing/data_structures/io/: __init__.py  readers.py  savers.py
src/bgc_data_processing/data_structures/variables/: __init__.py  ensembles.py  sets.py  vars.py
src/bgc_data_processing/defaults/: __init__.py
src/bgc_data_processing/loaders/: __init__.py  abfile_loaders.py  abfiles_loaders.py  base.py  csv_loaders.py  netcdf_loaders.py
src/bgc_data_processing/providers/: __init__.py  argo.py  clivar.py  cmems.py  esacci_oc.py  glodap.py  glodap_2019.py  glodap_2022.py  hycom.py  ices.py  imr.py  nmdc.py
src/bgc_data_processing/utils/: __init__.py  dateranges.py  patterns.py
